[package]
name = "cameraunit_asi"
version = "1.0.1"
edition = "2021"
rust-version = "1.68.0"
authors = ["Sunip K. Mukherjee"]
license = "MIT OR Apache-2.0"
keywords = ["camera", "api", "interface"]
readme = "README.MD"
repository = "https://github.com/sunipkm/cameraunit"
homepage = "https://github.com/sunipkm/cameraunit"
description = """
An efficient and ergonomic interface to capture images using cameras.
"""
exclude = [".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cameraunit = "1.0.3"
image = "0.24.7"
log = "0.4.20"

[build-dependencies]
bindgen = "0.68.1"
cc = "1.0.83"
