[package]
name = "cameraunit_asi"
version = "2.2.0"
edition = "2021"
rust-version = "1.68.0"
authors = ["Sunip K. Mukherjee"]
license = "MIT OR Apache-2.0"
readme = "README.MD"
repository = "https://github.com/sunipkm/cameraunit"
homepage = "https://crates.io/crates/cameraunit_asi"
keywords = ["cameraunit", "interface", "api", "zwo", "asi"]
build = "build.rs"
description = """
An efficient and ergonomic interface to capture images using cameras.
"""
exclude = [".github"]

[[bin]]
name = "asicamera_capture"
path = "src/main.rs"
test = true
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cameraunit = "2.0.0"
chrono = "0.4.31"
configparser = "3.0.2"
ctrlc = "3.4.1"
fitsio = "0.21.2"
image = "0.24.7"
log = "0.4.20"


[build-dependencies]
bindgen = "0.68.1"
cc = "1.0.83"
